dnl# -*- sh -*-
dnl# the "configure" script is made from this by running GNU "autoconf"

AC_INIT(Frame.C)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_PATH_XTRA
echo "Ignoring libraries \"$X_PRE_LIBS\" requested by configure."
dnl# LIBS="$LIBS$X_LIBS$X_PRE_LIBS"
LIBS="$LIBS$X_LIBS"

AC_ARG_ENABLE(fltk2,[  --enable-fltk2          use fltk2 (default=no)])
if test x$enable_fltk2 = xyes; then
    LIBS="-lfltk2 -lXft -lXinerama -lXi $LIBS"
    CXXFLAGS="$CXXFLAGS -I/usr/local/include/fltk/compat"
else
    LIBS="-lfltk -lXft -lXinerama $LIBS"
fi

MAKEDEPEND="\$(CXX) -M"

dnl# add warnings and optimization to compiler switches:
dnl# do this last so messing with switches does not break tests
if test -n "$GXX"; then
    # GNU C compiler
    # -Wno-return-type is necessary for Xlib header files on many systems:
    CFLAGS="$CFLAGS -Wall -Wno-return-type $X_CFLAGS"
    CXXFLAGS="$CXXFLAGS -Wall -Wno-return-type $X_CFLAGS"
else
if test "`(uname) 2>/dev/null`" = IRIX; then
  if expr "`(uname -r)`" \>= 6.2; then
    # turn on new "n32" Irix compiler:
    CXX="CC -n32"
    CC="cc -n32"
    LD="ld -n32"
    # but -M is broken so use old compiler:
    MAKEDEPEND="CC -M"
    # -woff 3322 is necessary due to errors in Xlib headers on IRIX
    CFLAGS="$CFLAGS -fullwarn -O2 $X_CFLAGS"
    CXXFLAGS="$CXXFLAGS -fullwarn -woff 3322 -O2 $X_CFLAGS"
  else
    # old Irix compiler:
    CFLAGS="$CFLAGS -O2 $X_CFLAGS"
    CXXFLAGS="$CXXFLAGS +w +pp -O2 $X_CFLAGS"
  fi
else
    # generic C compiler:
    CFLAGS="$CFLAGS $X_CFLAGS"
    CXXFLAGS="$CXXFLAGS $X_CFLAGS"
fi
fi
AC_SUBST(MAKEDEPEND)
dnl# AC_CONFIG_HEADER(config.h:configh.in)
AC_OUTPUT(makeinclude)

dnl# end of configure.in
